--- a/rmd/03-overview.Rmd
+++ b/rmd/03-overview.Rmd
@@ -1,2 +1,2 @@
 # Thesis overview {- #overview}
-This thesis is divided into three parts: introduction and methods, scientific contributions, and concluding remarks. First, I introduce the biological context for my thesis, followed by the method section with the flowcharts and description of various data analysis pipelines. Next, in scientific contributions, there are three chapters: Chapter 1 is the latest version of the manuscript submitted to BioRxiv (Lazar-Contes et al. 2020), Chapter 2 is published (Alshanbayeva et al. 2021), and chapter 3 is included as a descriptive chapter on shortRNA and a manuscript is in preparation. My contribution to each paper is summarized at the beginning of each chapter. In the end, the thesis concludes with a summary and outlook.
+This thesis is divided into three parts: introduction and methods, scientific contributions, and concluding remarks. First, I introduce the biological context for my thesis, [Introduction](#intro), followed by the method section with the flowcharts and description of various data analysis pipelines, [Methods](#methods). Next, in scientific contributions, there are three chapters: [Chapter 1](#chapter1) is the latest version of the manuscript submitted to BioRxiv (Lazar-Contes et al. 2020), [Chapter 2](#chapter2) is published (Alshanbayeva et al. 2021), and [Chapter 3](#chapter3) is included as a descriptive chapter on shortRNA and a manuscript is in preparation. My contribution to each paper is summarized at the beginning of each chapter. In the end, the thesis concludes with a summary and outlook, [Conclusion and outlook](#conclusion).
