--- a/rmd/08-shortRNA.Rmd
+++ b/rmd/08-shortRNA.Rmd
@@ -521,7 +521,7 @@ pseudo-chromosomes (index = "customGenome"), with the GTF from Ensembl
 database obtained from getDB() of shortRNA (GTF = exonsBy(db\$ensdb)),
 and allowing to report the maximal number of equally-best mapping
 locations (nBestLocations = 16). Please refer to the schematic in Figure
-7.
+\ref{fig:3f7}.
 
 #### Reads annotation and assignment
 
@@ -531,7 +531,7 @@ is possible that a read overlaps with multiple features. Next, the
 overlaps are parsed with the assignReads() function with the assignment
 rules, defaultAssignRules(), for validating the overlap and finding
 assignment of multi mapping reads. Please refer to the schematic in
-Figure 7.
+Figure \ref{fig:3f7}.
 
 #### Assignment rules
 
@@ -596,13 +596,14 @@ long, with the first nucleotide being a T.
 
 If the read cannot be identified as a primary piRNA, it is referred to
 as a piRNA precursor.
-
+```r
     $typeValidation$primary_piRNA$fallback
     [1] "piRNA_precursor"
+```
 
 Secondary piRNA sequences should be 26 to 32 nucleotides long, with A in
 the 10th position [@brennecke2007].
-
+```r
     $typeValidation$secondary_piRNA
     $typeValidation$secondary_piRNA$fun
     function(src, allowRevComp=FALSE, length=26:32){
@@ -618,17 +619,19 @@ the 10th position [@brennecke2007].
       }
       valid
     }
+```
 
 If a read cannot be identified as secondary piRNA, it is referred to as
 a piRNA precursor.
-
+```r
     $typeValidation$secondary_piRNA$fallback
     [1] "piRNA_precursor"
+```
 
 For miRNAs, the length should be between 19 and 24 nucleotides, and the
 read should overlap the feature by at least 16 bp. The maximum number of
 non-overlapping nucleotides allowed is three.
-
+```r
     $typeValidation$miRNA
     $typeValidation$miRNA$fun
     function (src, length = 19:24, minOverlap = 16L, maxNonOverlap = 3L)
@@ -639,12 +642,14 @@ non-overlapping nucleotides allowed is three.
 
     $typeValidation$miRNA$length
     [1] 19 20 21 22 23 24
+```
 
 If a read cannot be assigned to a mature miRNA, it is assigned to a
 miRNA precursor.
-
+```r
     $typeValidation$miRNA$fallback
     [1] "miRNA_precursor"
+```
 
 Reads that are assigned to tRNAs (or pseudo tRNAs) undergo additional
 classification. tRNA 5p fragments are less than 30 bp long and begin in
@@ -653,7 +658,7 @@ distance to the feature end of 5bp. Starts at +/= 1bp of the feature and
 has a length of 30 to 34 nucleotides for 5p half. The 3p half begins at
 +/= 1bp of the feature, has a length of 34 to 50 nucleotides, and ends
 with CCA.
-
+```r
     $reclassify
     $reclassify$tRNA
     function(srcs, rules=list(
@@ -671,32 +676,34 @@ with CCA.
       factor(apply(valids, 1, FUN=function(x) max(which(x))),
              seq_len(ncol(valids)), colnames(valids))
     }
+```
 
 We also assign priorities to different types of RNA. Priorities can be
 changed by increasing or decreasing the numbers; for example, in the
 case of only miRNA sequencing, users can set higher priorities for
 miRNAs by changing the number from 1 to 2 or higher.
-
+```r
     $priorities
     miRNA            tRNA           tRNAp         Mt_tRNA           snRNA         1               1               1               1               1
     snoRNA       antisense   primary_piRNA secondary_piRNA       precursor
       1               1               1               1              -1
     long_RNA         longRNA
      -1              -1
+```
 
 #### Features tree
 
 We organized the features and reads in the form of a rooted phylogenetic
 tree in a hierarchical fashion. This is done by the function
-assignReadsToTree() in shortRNA, Figure 12. From the root, we have two
-main branches: shortRNA and long RNA, Figure 8C. We keep the features
+assignReadsToTree() in shortRNA, Figure \ref{fig:3f12}. From the root, we have two
+main branches: shortRNA and long RNA, Figure \ref{fig:3f8}C. We keep the features
 that are longer than 200 bp in long RNA and the features that are
 shorter than 200 bp in short RNA. Each branch is then further divided
 into RNA types. The miRNAs and tRNAs are further divided into
-sub-branches to account for the multi-mapping problems, Figure 9 and
-Figure 10. Sequence quality and a follow up trimming, may result in one
+sub-branches to account for the multi-mapping problems, Figure \ref{fig:3f9} and
+Figure \ref{fig:3f10}. Sequence quality and a follow up trimming, may result in one
 nucleotide shorter sequence. Because of the hierarchical organization,
-unique reads mapping to a feature are kept in the hierarchy, Figure 8.
+unique reads mapping to a feature are kept in the hierarchy, Figure \ref{fig:3f8}.
 If the user would like to include an additional database for short RNAs,
 an additional branch can be added to the tree while preparing
 annotation, prepareAnnotation().
@@ -708,17 +715,17 @@ the case, typical workflows will either randomly align to one location
 or not report any alignment. We allow for multi-mapping during
 alignment, and address ambiguities when we assign reads to features.
 Specifically, we assign it to the parent of all the features to which
-the read maps. Figure 11A depicts a read that can be mapped to multiple
-tRNAs, Figure 11B. While assigning reads to the features tree, we assign
+the read maps. Figure \ref{fig:3f11}A depicts a read that can be mapped to multiple
+tRNAs, Figure \ref{fig:3f11}B. While assigning reads to the features tree, we assign
 this read as an ambiguous read to the parent of all the features it is
-mapping to; in this case, tRNA-Leu-CAG, Figure 11C.
+mapping to; in this case, tRNA-Leu-CAG, Figure \ref{fig:3f11}C.
 
 #### Construction of TreeSummarizedExperiment object
 
 The feature tree and the assigned reads DataFrame is then used for the
 construction of the TreeSummarizedExperiment object, which is then used
 for all the downstream analysis, including differential analysis. This
-is depicted in Figure 12.
+is depicted in Figure \ref{fig:3f12}.
 
 #### Differential analysis
 
@@ -732,7 +739,7 @@ analysis of features.
 Following normalization and differential analysis, users can use the
 TreeHeatmap, ggtree, and castor packages for exploratory data analysis
 and figure creation. The shortRNA makeTracks() function can be used to
-create genomic tracks, as shown in Figures 15, 19, and 20. We intend to
+create genomic tracks, as shown in Figures \ref{fig:3f15}, \ref{fig:3f18a}, and \ref{fig:3f18b}. We intend to
 expand our package by writing wrappers for these packages in order to
 generate plots from within shortRNA.
 
@@ -806,7 +813,7 @@ parameters to analyze the sperm dataset. Following the data analysis, we
 limited our assessment to miRNAs for comparison across tools. We found
 1970 miRNAs using Oasis2, 1137 using Sports1, 1024 using seqpac, and 503
 using shortRNA. We began by examining the quantification with all four
-tools. Figure 13 shows a comparison of the quantification of miRNAs from
+tools. Figure \ref{fig:3f13} shows a comparison of the quantification of miRNAs from
 SPORTS1, Oasis2, and seqpac with shortRNA. We discovered that the
 quantifications of shortRNA and Oasis2, as well as shortRNA and Sports1,
 are highly correlated. In contrast, the correlation of quantification
@@ -820,11 +827,11 @@ were considered invalid overlaps in light of our assignment rules.
 Following that, we examined the overlaps of identified miRNAs between
 four tools. Despite the fact that all of the tools use miRBase, we
 discovered that only 44 miRNAs were commonly detected by all of the
-tools (Figure 14). One possible explanation is that the miRBase for
+tools, Figure \ref{fig:3f14}. One possible explanation is that the miRBase for
 mouse genome contains approximately 2000 mature miRNAs and approximately
 1300 miRNA precursors, and seqpac and Sports1 only use miRNA precursors
 in the data analysis pipeline, whereas Oasis2 and shortRNA use both
-mature and miRNA precursors. Figure 14 shows that there were 231 miRNAs
+mature and miRNA precursors. Figure \ref{fig:3f14} shows that there were 231 miRNAs
 that were commonly detected by Oasis2, Sports1, and seqpac, but not by
 shortRNA. Next, we looked into these miRNAs and discovered that three
 were removed from the most recent version of miRBase; for the other 228,
@@ -847,13 +854,13 @@ from a miRNA precursor, mmu-miR-144. To test for differential analysis,
 the sequences from these miRNAs were spiked while also creating
 differences between groups. Three invalid sequences were also simulated
 for the precursor to test the accuracy of read assignment and were
-properly aligned to miRNA precursors, as shown in Figure 15.
+properly aligned to miRNA precursors, as shown in Figure \ref{fig:3f15}.
 
 Further, the reads were assigned accurately to miRNAs, Table 2.
 
 +----------------+---------+------------------+---------------------+---------+---------+---------+
 | **Sequence**   | **Ov    | **Transcript     | Transcript type     | **Tra   |         | **Valid |
-|                | erlap** | ID**             |                     | nscript | **      | miRNA** |
+|                |erlap** | ID**             |                     |nscript | **      |miRNA** |
 |                |         |                  |                     | l       | valid** |         |
 |                |         |                  |                     | ength** |         |         |
 +================+=========+==================+=====================+=========+=========+=========+
@@ -905,7 +912,7 @@ finds an appropriate resolution on the tree to interpret the
 association. During simulations, we spiked the mature miRNAs miR-99b-5p
 and miR-99b-3p to be different. After differential analysis, because
 both miR-99b-5p and miR-99b-3p were simulated to be different, we found
-that miR-99b was called to be differentially expressed, Figure 17.
+that miR-99b was called to be differentially expressed, Figure \ref{fig:3f16}.
 Looking at the cluster, miRNAcluster_17:17830188-17830879, the full
 cluster would have been differentially expressed if one read mapping to
 miR-125a-5p, in grey, would also have been significantly different.
@@ -917,20 +924,18 @@ we used an unpublished PBMC human dataset and corresponding quantitative
 real-time PCR (qPCR) quantifications. The PBMC dataset was analyzed
 using the default parameters from Oasis2, Sports1, seqpac, and shortRNA.
 Then, we correlated the qPCR quantification of five miRNAs with the
-quantification using all four tools, Figure 18. Because Sports1 and
+quantification using all four tools, Figure \ref{fig:3f17}. Because Sports1 and
 seqpac only report miRNA quantification at the level of precursors, the
 precursor of mature miRNAs quantification was used for the correlation
 of these tools with the qPCR. When we looked at the overall correlation
-of miRNAs with qPCR quantifications, we discovered that the \_\_\_\_
-tool had a higher Pearson correlation of 90% (R=.9), Figure 18A, and a
-more robust correlation of \_\_ . Overall, we found a low correlation of
+of miRNAs with qPCR quantifications, we discovered that except seqpac, all tools have a good correlation, Figure \ref{fig:3f17}A. Overall, we found a low correlation of
 quantifications between four tools and qPCR. We found that Oasis2
 quantification was negatively correlated with qPCR Ct values for miRNAs
-miR-30d-5p and miR-30e-5p, as shown in Figure 18B. The quantification of
+miR-30d-5p and miR-30e-5p, as shown in Figure \ref{fig:3f18}B. The quantification of
 miRNAs using short RNAs was found to be positively correlated with the
 quantification of miRNAs using qPCR. In addition, we performed a visual
 inspection of the reads mapping to these miRNAs by creating genomic
-tracks, as shown in Figures 19 and 20. As a result, while shortRNA
+tracks, as shown in Figures \ref{fig:3f18a} and \ref{fig:3f18b}. As a result, while shortRNA
 quantifications were visually observed to correctly count reads, they
 were not substantially correlated with qPCR, but were generally better
 correlated with qPCR quantifications than the other methods.
@@ -1051,7 +1056,7 @@ assignment.
 
 The ambiguous assignment of multi-mapping reads to the parent of all
 mappable features is not always biologically meaningful. If a read is
-assigned to multiple tRNAs, Figure 11, it is still meaningful to assign
+assigned to multiple tRNAs, Figure \ref{fig:3f11}, it is still meaningful to assign
 it to the parent of all mapping tRNAs. In contrast, if a read maps to
 both a tRNA and a protein-coding gene, assigning it to the parent of
 both protein coding and tRNA provides less biological insight. Hence, we
